removed experience, removed navigation tabs, added foodventory to projects

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,32 +21,34 @@ Currently, I am seeking a software engineering internship position.
   <!-- <img src="path/to/your/photo.jpg" alt="Your Photo" class="biography__photo"> -->
 </section>
 
-<section class="experience">
+<!-- <section class="experience">
   <h2 class="section__title">Experience</h2>
   <ul class="experience__list">
     <li class="experience__item">
       <h3 class="experience__role">[Job Title] at [Company]</h3>
       <p class="experience__duration">[Start Date] - [End Date]</p>
-      <p class="experience__description">
+      <p class="experience__description"> -->
         <!-- Add your job description here -->
-        Responsible for [Key Responsibilities and Achievements].
-      </p>
-    </li>
+        <!-- Responsible for [Key Responsibilities and Achievements]. -->
+      <!--</p>
+    </li> -->
     <!-- Add more experience items as needed -->
-  </ul>
+ <!-- </ul> -->
   <!-- <img src="path/to/your/experience-photo.jpg" alt="Experience Photo" class="experience__photo"> -->
-</section>
+<!-- </section> -->
 
 <section class="projects">
   <h2 class="section__title">Projects</h2>
   <div class="projects__grid">
     <div class="project__item">
-      <h3 class="project__title">[Project Name]</h3>
+      <h3 class="project__title">FoodVentory</h3>
       <p class="project__description">
         <!-- Add your project description here -->
-        An overview of the project, including key features and technologies used.
+        Developed a cross-platform solution for iOS and Android, aimed at optimizing grocery shopping and meal planning
+        by integrating receipt scanning, virtual pantry management, and intelligent recipe recommendations. Implemented key features including seamless receipt scanning and text extraction, creation of a user-friendly
+        interface, and integration of real-time data synchronization using React Native and Firebase.
       </p>
-      <!-- <img src="path/to/your/project-photo.jpg" alt="Project Photo" class="project__photo"> -->
+      <!-- <img src="path/to/your/project-photo.jpg" alt="Project Photo" class="project__photo"> --> 
     </div>
     <!-- Add more project items as needed -->
   </div>
