--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,10 +81,10 @@ Currently, I am seeking a software engineering internship position.
     margin-bottom: 2em;
   }
 
-  .projects__grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1em;
+  .projects__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2em;
   }
 
   .project__item {
