added description for project foodventory

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,6 +42,7 @@ Currently, I am seeking a software engineering internship position.
   <div class="projects__grid">
     <div class="project__item">
       <h3 class="project__title">FoodVentory</h3>
+      <p class="project__stack"><strong>Stack:</strong>Group Project | React Native, Firebase</p>
       <p class="project__description">
         <!-- Add your project description here -->
         Developed a cross-platform solution for iOS and Android, aimed at optimizing grocery shopping and meal planning
