added foodventory image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,6 @@ layout: archive
 
 {{ content }}
 
-<h1 class="home__title">Welcome to My Portfolio</h1>
-
 <section class="biography">
   <h2 class="section__title">Biography</h2>
   <p class="biography__content">
@@ -50,7 +48,7 @@ Currently, I am seeking a software engineering internship position.
         by integrating receipt scanning, virtual pantry management, and intelligent recipe recommendations. Implemented key features including seamless receipt scanning and text extraction, creation of a user-friendly
         interface, and integration of real-time data synchronization using React Native and Firebase.
       </p>
-      <!-- <img src="path/to/your/project-photo.jpg" alt="Project Photo" class="project__photo"> --> 
+      <img src="assets/images/SP17-FoodVentory.mp4" alt="Project Photo" class="project__photo"> 
     </div>
     <!-- Add more project items as needed -->
   </div>
