attempting to fix foodventory image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ Currently, I am seeking a software engineering internship position.
         by integrating receipt scanning, virtual pantry management, and intelligent recipe recommendations. Implemented key features including seamless receipt scanning and text extraction, creation of a user-friendly
         interface, and integration of real-time data synchronization using React Native and Firebase.
       </p>
-      <img src=assets/images/FoodVentory Title Final.png alt="Project Photo" class="project__photo"> 
+      <img src=carloskikotrevino/carloskikotrevino.github.io/assets/images/FoodVentory_Title_Final.png alt="Project Photo" class="project__photo"> 
     </div>
     <!-- Add more project items as needed -->
   </div>
