--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ In addition to studying at the University of Texas, I have ventured out by takin
 
 Currently, I am seeking a software engineering internship position.
   </p>
- <img src="FoodVentory_Title_Final.png" alt="Your Photo" class="biography__photo"> 
+ <img src="../assets/images/LinkedIn Pic 2.jpeg" alt="Your Photo" class="biography__photo"> 
 </section>
 
 <!-- <section class="experience">
