tweaking foodventory image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ In addition to studying at the University of Texas, I have ventured out by takin
 
 Currently, I am seeking a software engineering internship position.
   </p>
- <img src="../assets/images/LinkedIn Pic 2.jpeg" alt="Your Photo" class="biography__photo"> 
+ <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo"> 
 </section>
 
 <!-- <section class="experience">
@@ -88,9 +88,17 @@ Currently, I am seeking a software engineering internship position.
   }
 
   .project__item {
+    flex: 1 1 300px;
     border: 1px solid #ccc;
     padding: 1em;
     border-radius: 5px;
+    max-width: 100%;
+  }
+
+  .project__photo {
+    width: 100%;
+    height: auto;
+    display: block;
   }
 </style>
 
