added new project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,6 +50,22 @@ Currently, I am seeking a software engineering internship position.
         interface, and integration of real-time data synchronization using React Native and Firebase.
       </p> 
     </div>
+
+    <div class="project__item">
+      <img src="../assets/images/human emotion recognition.jpeg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Human Emotion Recognition in Computer Vision</h3>
+      <p class="project__stack">Research Project | Python</p>
+      <p class="project__dates">January - May 2024</p>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Developed an advanced emotion recognition system using computer vision and deep learning techniques, integrating
+            Gabor filtering, edge detection, and key-point processing to classify emotions with high accuracy.</li>
+          <li>Conducted comprehensive data collection and preprocessing, utilizing FER+ and RaFD datasets, and implemented
+            ensemble prediction strategies to enchance model performance.</li> 
+        </ul>
+      </p> 
+    </div>
     <!-- Add more project items as needed -->
   </div>
 </section>
