--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,9 +45,12 @@ Currently, I am seeking a software engineering internship position.
       <p class="project__dates">August - May 2024</p>
       <p class="project__description">
         <!-- Add your project description here -->
-        Developed a cross-platform solution for iOS and Android, aimed at optimizing grocery shopping and meal planning
-        by integrating receipt scanning, virtual pantry management, and intelligent recipe recommendations. Implemented key features including seamless receipt scanning and text extraction, creation of a user-friendly
-        interface, and integration of real-time data synchronization using React Native and Firebase.
+        <ul>
+          <li>Developed a cross-platform solution for iOS and Android, aimed at optimizing grocery shopping and meal planning
+            by integrating receipt scanning, virtual pantry management, and intelligent recipe recommendations.</li>
+          <li>Implemented key features including seamless receipt scanning and text extraction, creation of a user-friendly
+            interface, and integration of real-time data synchronization using React Native and Firebase.</li>
+        </ul>
       </p> 
     </div>
 
@@ -63,6 +66,23 @@ Currently, I am seeking a software engineering internship position.
             Gabor filtering, edge detection, and key-point processing to classify emotions with high accuracy.</li>
           <li>Conducted comprehensive data collection and preprocessing, utilizing FER+ and RaFD datasets, and implemented
             ensemble prediction strategies to enchance model performance.</li> 
+        </ul>
+      </p> 
+    </div>
+
+    <div class="project__item">
+      <img src="../assets/images/Political Cartoon Generator.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Political Cartoon Generator</h3>
+      <p class="project__stack">Group Project | Python, NLP, Image Generation</p>
+      <p class="project__dates">November 2024</p>
+      <a href="https://medium.com/@nrv434/political-cartoon-generator-9fe863e7c638">Medium Article</a>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Utilised GPT API to enable conversion from article to cartoon as the baseline for comparison.</li>
+          <li>Created several pipelines utilising DALL-E, StableDiffusion, and OpenFlamingo to find optimal methods for
+            context-based image generation; implemented Doc2Vec model to test viability of generating images from numerical
+            representations.</li> 
         </ul>
       </p> 
     </div>
