--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@ Currently, I am seeking a software engineering internship position.
       <img src="../assets/images/Political Cartoon Generator.jpg" alt="Project Photo" class="project__photo">
       <h3 class="project__title">Political Cartoon Generator</h3>
       <p class="project__stack">Group Project | Python, NLP, Image Generation</p>
-      <p class="project__dates">November 2024</p>
+      <p class="project__dates">November 2023</p>
       <a href="https://medium.com/@nrv434/political-cartoon-generator-9fe863e7c638">Medium Article</a>
       <p class="project__description">
         <!-- Add your project description here -->
@@ -83,6 +83,21 @@ Currently, I am seeking a software engineering internship position.
           <li>Created several pipelines utilising DALL-E, StableDiffusion, and OpenFlamingo to find optimal methods for
             context-based image generation; implemented Doc2Vec model to test viability of generating images from numerical
             representations.</li> 
+        </ul>
+      </p> 
+    </div>
+
+    <div class="project__item">
+      <img src="../assets/images/chat room.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Client-Server with Socket Network Programming</h3>
+      <p class="project__stack">Personal Project | Java</p>
+      <p class="project__dates">April 2022</p>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Developed chat room application using Java Socket programming and complex object-oriented programming
+            principles.</li>
+          <li>Built and enabled one-on-one chat between users while hosting up to five clients within the server.</li> 
         </ul>
       </p> 
     </div>
