updated biography photo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,6 +43,7 @@ Currently, I am seeking a software engineering internship position.
       <h3 class="project__title">FoodVentory</h3>
       <p class="project__stack">Group Project | React Native, Firebase</p>
       <p class="project__dates">August - May 2024</p>
+      <a href="https://drive.google.com/file/d/141mshtWl1glDdppBwMJ7LMwZOx_JRIKC/view?usp=sharing">FoodVentory Video</a>
       <p class="project__description">
         <!-- Add your project description here -->
         <ul>
@@ -116,11 +117,19 @@ Currently, I am seeking a software engineering internship position.
     margin-bottom: 1em;
   }
 
-  .biography__photo, .experience__photo, .project__photo {
+  .project__photo {
     width: 100%;
     height: auto;
     margin-top: 1em;
   }
+
+  .biography__photo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
 
   .experience__list {
     list-style: none;
