--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,11 +26,13 @@ Currently, I am seeking a software engineering internship position.
       <img src="../assets/images/intramural tennis.jpeg" alt="Hobby Photo 2" class="collage__photo">
       <img src="../assets/images/fishing 1.jpg" alt="Hobby Photo 3" class="collage__photo">
       <img src="../assets/images/surfing w dad.jpg" alt="Hobby Photo 4" class="collage__photo">
+      <img src="../assets/images/jetski.jpeg" alt="Hobby Photo 5" class="collage__photo">
+      <img src="../assets/images/biking colorado.jpeg" alt="Hobby Photo 6" class="collage__photo">
+      <img src="../assets/images/fishing 2.JPEG" alt="Hobby Photo 7" class="collage__photo">
+      <img src="../assets/images/london eye.jpeg" alt="Hobby Photo 8" class="collage__photo">
       <!-- Add more photos as needed -->
     </div>
   </section>
-  
-  <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo"> 
 </section>
 
 <!-- <section class="experience">
