--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -126,7 +126,7 @@ Currently, I am seeking a software engineering internship position.
 
 <style>
   .section__title {
-    font-size: 2em;
+    font-size: 1.5em;
     margin-bottom: 0.5em;
   }
 
@@ -137,8 +137,8 @@ Currently, I am seeking a software engineering internship position.
 
   .biography__content {
     display: flex;
-    align-items: center;
-    gap: 2em;
+    align-items: flex-start;
+    gap: 1.5em;
   }
 
   .project__photo {
@@ -149,13 +149,14 @@ Currently, I am seeking a software engineering internship position.
 
   .biography__text {
   flex: 1;
-  font-size: 1em;
+  font-size: 0.9em;
+  line-height: 1.4em;
 }
 
   .biography__photo {
-    width: 300px;
-  height: auto;
-  border-radius: 5px;
+    width: 200px;
+    height: auto;
+    border-radius: 5px;
   }
 
   @media (max-width: 768px) {
