--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ In addition to studying at the University of Texas, I have ventured out by takin
 
 Currently, I am seeking a software engineering internship position.
     </div>
-    <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo">
+    <!-- <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo"> -->
   </div>
 </section>
 
