--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: archive
 {{ content }}
 
 <section class="biography">
-  <h2 class="section__title">A little about me</h2>
+  <h2 class="biography__title">A little about me</h2>
   <div class="biography__content">
     <div class="biography_text">
     <!-- Add your biography content here -->
@@ -130,13 +130,13 @@ Currently, I am seeking a software engineering internship position.
     margin-bottom: 0.5em;
   }
 
-  .biography__content, .experience__description, .project__description {
+  .experience__description, .project__description {
     font-size: 1em;
     margin-bottom: 1em;
   }
 
   .biography__title {
-  font-size: 1.5em !important;
+  font-size: 1em !important;
   margin-bottom: 0.5em !important;
   }
 
