fixing bio size

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: archive
 <section class="biography">
   <h2 class="biography__title">A little about me</h2>
   <div class="biography__content">
-    <div class="biography_text">
+    <div class="biography__text">
     <!-- Add your biography content here -->
     Hello, my name is Kiko and I am a recent graduate from the Cockrell School of Engineering at UT Austin, where I received my B.S. in Electrical and Computer Engineering with a specialization in Software Engineering and Design and a minor is Business Administration.
 
