--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ In addition to studying at the University of Texas, I have ventured out by takin
 
 Currently, I am seeking a software engineering internship position.
     </div>
-    <!-- <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo"> -->
+    <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo"> 
   </div>
 </section>
 
@@ -154,8 +154,8 @@ Currently, I am seeking a software engineering internship position.
 
   .biography__text {
     flex: 1 !important;
-    font-size: 0.65em !important;
-    line-height: 1.2em !important;
+    font-size: 0.8em !important;
+    line-height: 1.4em !important;
   }
 
   .biography__photo {
@@ -174,8 +174,6 @@ Currently, I am seeking a software engineering internship position.
     width: 100% !important;
     }
   }
-
-  
 
   .experience__list {
     list-style: none;
