--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@ Currently, I am seeking a software engineering internship position.
 
   <section class="hobbies">
     <h2 class="section__title">Personal Interests and Hobbies</h2>
+    <div class = "hobbies__description">Aside from engineering, I enjoy playing sports, exploring the outdoors, and traveling during my freetime. I am an avid tennis player, and a huge fan of basketball from being raised as a San Antonio Spurs fan.</div>
     <div class="collage">
       <img src="../assets/images/intramural tennis.jpeg" alt="Hobby Photo 2" class="collage__photo">
       <img src="../assets/images/surfing w dad.jpg" alt="Hobby Photo 4" class="collage__photo">
@@ -126,11 +127,11 @@ Currently, I am seeking a software engineering internship position.
 
 <style>
   .section__title {
-    font-size: 1.5em;
+    font-size: 1em;
     margin-bottom: 0.5em;
   }
 
-  .experience__description, .project__description {
+  .experience__description, .project__description, .hobbies__description {
     font-size: 1em;
     margin-bottom: 1em;
   }
