--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,23 +21,6 @@ Currently, I am seeking a software engineering internship position.
   </div>
 </section>
 
-  <section class="hobbies">
-    <h2 class="section__title">Personal Interests and Hobbies</h2>
-    <div class = "hobbies__description">Aside from engineering, I enjoy playing sports, exploring the outdoors, and traveling during my freetime. I am an avid tennis player, and a huge fan of basketball from being raised as a San Antonio Spurs fan.</div>
-    <div class="collage">
-      <img src="../assets/images/intramural tennis.jpeg" alt="Hobby Photo 2" class="collage__photo">
-      <img src="../assets/images/surfing w dad.jpg" alt="Hobby Photo 4" class="collage__photo">
-      <img src="../assets/images/jetski.jpeg" alt="Hobby Photo 5" class="collage__photo">
-      <img src="../assets/images/biking colorado.jpeg" alt="Hobby Photo 6" class="collage__photo">
-      <img src="../assets/images/fishing 2.JPEG" alt="Hobby Photo 7" class="collage__photo">
-      <img src="../assets/images/london eye.jpeg" alt="Hobby Photo 8" class="collage__photo">
-      <img src="../assets/images/croatia w dad.jpeg" alt="Hobby Photo 1" class="collage__photo">
-      <img src="../assets/images/fishing 1.jpg" alt="Hobby Photo 3" class="collage__photo">
-      <!-- Add more photos as needed -->
-    </div>
-  </section>
-
-
 <!-- <section class="experience">
   <h2 class="section__title">Experience</h2>
   <ul class="experience__list">
@@ -124,6 +107,24 @@ Currently, I am seeking a software engineering internship position.
     <!-- Add more project items as needed -->
   </div>
 </section>
+
+<section class="hobbies">
+  <h2 class="section__title">Personal Interests and Hobbies</h2>
+  <div class = "hobbies__description">Aside from engineering, I enjoy playing sports, exploring the outdoors, and traveling during my freetime. I am an avid tennis player, and a huge fan of basketball from being raised as a San Antonio Spurs fan.</div>
+  <div class="collage">
+    <img src="../assets/images/intramural tennis.jpeg" alt="Hobby Photo 2" class="collage__photo">
+    <img src="../assets/images/surfing w dad.jpg" alt="Hobby Photo 4" class="collage__photo">
+    <img src="../assets/images/jetski.jpeg" alt="Hobby Photo 5" class="collage__photo">
+    <img src="../assets/images/biking colorado.jpeg" alt="Hobby Photo 6" class="collage__photo">
+    <img src="../assets/images/fishing 2.JPEG" alt="Hobby Photo 7" class="collage__photo">
+    <img src="../assets/images/london eye.jpeg" alt="Hobby Photo 8" class="collage__photo">
+    <img src="../assets/images/956ers.jpeg" alt="Hobby Photo 9" class="collage__photo">
+    <img src="../assets/images/croatia w dad.jpeg" alt="Hobby Photo 1" class="collage__photo">
+    <img src="../assets/images/fishing 1.jpg" alt="Hobby Photo 3" class="collage__photo">
+    <!-- Add more photos as needed -->
+  </div>
+</section>
+
 
 <style>
   .section__title {
