attempting to change size of section titles

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -127,10 +127,11 @@ Currently, I am seeking a software engineering internship position.
 
 
 <style>
-  .section__title {
-    font-size: 1em;
-    margin-bottom: 0.5em;
-  }
+  .hobbies .section__title,
+.projects .section__title {
+  font-size: 1em !important;
+  margin-bottom: 0.5em !important;
+}
 
   .experience__description, .project__description, .hobbies__description {
     font-size: 1em;
