--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,14 +5,14 @@ layout: archive
 {{ content }}
 
 <section class="biography">
-  <h2 class="biography__title">A Little About Me</h2>
+  <h2 class="biography__title">Hello, my name is Kiko.</h2>
   <div class="biography__content">
     <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo">
     <div class="biography__text">
       <div class="about-me">
-        <h3>About Me</h3>
+        <h3>Versatile Software Engineer</h3>
         <p>
-          Hello, my name is Kiko and I am a recent graduate from the Cockrell School of Engineering at UT Austin.
+          I am a recent graduate from the Cockrell School of Engineering at UT Austin.
           My passions and career interests lie in back-end software development, mobile computing, artificial intelligence/machine learning, and entrepreneurship; my technical background stems from various independent and group-based engineering projects within Cockrell, ranging from embedded systems video games to poem-generating software applications. Down the road, I hope to find a position where I may fulfill both my engineering and business interests while making a meaningful impact in the field of technology.
         </p>
         <p>
@@ -23,17 +23,18 @@ layout: archive
         </p>
       </div>
       <div class="skills">
-        <h3>Things I Can Do</h3>
+        <h3>Skills</h3>
         <ul>
-          <li>Back-end Software Development</li>
-          <li>Mobile Computing</li>
-          <li>Artificial Intelligence / Machine Learning</li>
-          <li>Embedded Systems</li>
-          <li>Project Management</li>
+          <li></li>
+          <li>Backend Programming (Python, Java, C/C++, JavaScript)</li>
+          <li>Web Development (HTML/CSS)</li>
+          <li>Machine Learning Modeling</li>
+          <li>Software Developer Tools (Git/Github, Linux, MobaXTerm, MongoDB Conpass, Android Studio)</li>
+          <li>Communication & Collaboration</li>
         </ul>
       </div>
       <div class="resume">
-        <a href="path/to/your/resume.pdf" class="resume-button" target="_blank">View My Resume</a>
+        <a href="../assets/images/Carlos Trevino Resume.pdf" class="resume-button" target="_blank">My Resume</a>
       </div>
     </div>
   </div>
@@ -195,6 +196,8 @@ layout: archive
 .education__title {
   font-size: 1.5em;
   margin-bottom: 0.5em;
+  margin-top: 0;
+  color: #007acc;
 }
 
 .education__university,
@@ -289,7 +292,7 @@ layout: archive
 .biography__title {
   font-size: 2em;
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   color: #333;
 }
 
@@ -306,7 +309,7 @@ layout: archive
   height: auto;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 0 auto 1.5em;
+  margin: 0 auto 1em;
 }
 
 .biography__text {
@@ -318,12 +321,13 @@ layout: archive
   padding: 1.5em;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 .about-me h3, .skills h3 {
   font-size: 1.5em;
   margin-bottom: 0.5em;
+  margin-top: 0;
   color: #007acc;
 }
 
