changed bio section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,6 +22,18 @@ layout: archive
           Currently, I am seeking a software engineering internship position.
         </p>
       </div>
+      <section class="education">
+        <div class="education__content">
+          <img src="../assets/images/university of texas logo.png" alt="University Logo" class="education__logo">
+          <div class="education__details">
+            <h2 class="education__title">Undergraduate Education</h2>
+            <p class="education__university">The University of Texas at Austin</p>
+            <p class="education__major"><strong>Major:</strong> Electrical and Computer Engineering</p>
+            <p class="education__minor"><strong>Minor:</strong> Business</p>
+            <p class="education__specialization"><strong>Specialization:</strong> Software Engineering and Design</p>
+          </div>
+        </div>
+      </section>
       <div class="skills">
         <h3>Skills</h3>
         <ul>
@@ -58,18 +70,6 @@ layout: archive
   <!-- <img src="path/to/your/experience-photo.jpg" alt="Experience Photo" class="experience__photo"> -->
 <!-- </section> -->
 
-<section class="education">
-  <div class="education__content">
-    <img src="../assets/images/university of texas logo.png" alt="University Logo" class="education__logo">
-    <div class="education__details">
-      <h2 class="education__title">Undergraduate Education</h2>
-      <p class="education__university">The University of Texas at Austin</p>
-      <p class="education__major"><strong>Major:</strong> Electrical and Computer Engineering</p>
-      <p class="education__minor"><strong>Minor:</strong> Business</p>
-      <p class="education__specialization"><strong>Specialization:</strong> Software Engineering and Design</p>
-    </div>
-  </div>
-</section>
 
 
 <section class="projects">
@@ -298,6 +298,7 @@ layout: archive
 
 .biography__content {
   max-width: 800px;
+  margin-top: 0.5em;
   margin: 0 auto;
   padding: 0 1.5em;
   text-align: center;
@@ -314,6 +315,7 @@ layout: archive
 
 .biography__text {
   text-align: left;
+  padding-top: 0;
 }
 
 .about-me, .skills, .resume {
