--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -318,7 +318,7 @@ layout: archive
   padding-top: 0;
 }
 
-.about-me, .skills, .resume {
+.about-me, .skills, .resume, .education{
   background: #fff;
   padding: 1.5em;
   border-radius: 10px;
