trying to fix bio title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,18 +5,18 @@ layout: archive
 {{ content }}
 
 <section class="biography">
-  <h2 class="biography__title">Hello, my name is Kiko.</h2>
+  <h2 class="biography__title">Hello, my name is Kiko</h2>
   <div class="biography__content">
     <img src="../assets/images/Tower Pic.JPG" alt="Your Photo" class="biography__photo">
     <div class="biography__text">
       <div class="about-me">
-        <h3>Versatile Software Engineer</h3>
+        <h3>Software Engineer & Developer</h3>
         <p>
           I am a recent graduate from the Cockrell School of Engineering at UT Austin.
-          My passions and career interests lie in back-end software development, mobile computing, artificial intelligence/machine learning, and entrepreneurship; my technical background stems from various independent and group-based engineering projects within Cockrell, ranging from embedded systems video games to poem-generating software applications. Down the road, I hope to find a position where I may fulfill both my engineering and business interests while making a meaningful impact in the field of technology.
+          My passions and career interests lie in back-end software development, mobile computing, artificial intelligence/machine learning, and entrepreneurship; my technical background stems from various independent and group-based engineering projects within Cockrell, ranging from poem-generating software algorithms to virtual pantry management mobile applications. Down the road, I hope to find a position where I may fulfill both my engineering and business interests while making a meaningful impact in the field of technology.
         </p>
         <p>
-          In addition to studying at the University of Texas, I have ventured out by taking courses at the University of California, Los Angeles, as well as in Barcelona, Greece, and Paris. I am extremely passionate about technology and innovation, while being considered a hard-working, determined individual who will go above and beyond to find any solution.
+          In addition to studying at the University of Texas, I have ventured out by taking engineering and business related courses at the University of California, Los Angeles, as well as in Barcelona, Greece, and Paris. I am extremely passionate about technology and innovation, while being considered a hard-working, determined individual who will go above and beyond to find any solution.
         </p>
         <p>
           Currently, I am seeking a software engineering internship position.
@@ -290,6 +290,7 @@ layout: archive
 }
 
 .biography__title {
+  margin-top: 0em;
   font-size: 2em;
   text-align: center;
   margin-bottom: 0.5em;
