added projects, revised typos

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,9 +39,9 @@ layout: archive
         <ul>
           <li></li>
           <li>Backend Programming (Python, Java, C/C++, JavaScript)</li>
-          <li>Web Development (HTML/CSS)</li>
+          <li>Frontend Development (HTML/CSS, React Native)</li>
           <li>Machine Learning Modeling</li>
-          <li>Software Developer Tools (Git/Github, Linux, MobaXTerm, MongoDB Conpass, Android Studio)</li>
+          <li>Software Developer Tools (Git/Github, Linux, MobaXTerm, MongoDB Compass, Android Studio)</li>
           <li>Communication & Collaboration</li>
         </ul>
       </div>
@@ -126,6 +126,21 @@ layout: archive
     </div>
 
     <div class="project__item">
+      <img src="../assets/images/blackjack.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Analyzing Blackjack ML strategies</h3>
+      <p class="project__stack">Research Project | Python, TensorFlow</p>
+      <p class="project__dates">November 2023</p>
+      <a href="../assets/images/Analyzing Machine Learning Strategies for Blackjack.docx.pdf">Research Paper</a>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Analyzed various machine learning based strategies to optimize decision-making in the game of Blackjack.</li>
+          <li>Implemented and compared Monte Carlo reinforcement learning algorithm, genetic algorithm, and basic strategy.</li>
+        </ul>
+      </p> 
+    </div>
+
+    <div class="project__item">
       <img src="../assets/images/chat room.jpg" alt="Project Photo" class="project__photo">
       <h3 class="project__title">Client-Server with Socket Network Programming</h3>
       <p class="project__stack">Personal Project | Java</p>
@@ -139,6 +154,54 @@ layout: archive
         </ul>
       </p> 
     </div>
+
+    <div class="project__item">
+      <img src="../assets/images/pattern recognition.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Word Pattern Recognition Model</h3>
+      <p class="project__stack">Personal Project | Java</p>
+      <p class="project__dates">March 2022</p>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Implemented a trie data structure and utilized graph algorithms to identify word patterns in songs and poems.</li>
+          <li>Implemented a retrieval algorithm for common phrases in media utilizing complex computer science algorithms.</li> 
+        </ul>
+      </p> 
+    </div>
+
+    <div class="project__item">
+      <img src="../assets/images/mastermind.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Mastermind game</h3>
+      <p class="project__stack">Personal Project | Java</p>
+      <p class="project__dates">February 2022</p>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Recreated the code-breaking board game Mastermind utilizing complex data structures and object-oriented
+            programming concepts in Java.</li>
+          <li>Constructed multiple Java classes to take user input and detect corresponding red/black peg output; Quickly
+            outputs user input history upon command and enables games to be replayed.</li> 
+        </ul>
+      </p> 
+    </div>
+
+    <div class="project__item">
+      <img src="../assets/images/space invaders.jpg" alt="Project Photo" class="project__photo">
+      <h3 class="project__title">Space Invaders</h3>
+      <p class="project__stack">Group Project | C, C++, ARM Assembly</p>
+      <p class="project__dates">January - May 2021</p>
+      <a href="https://youtu.be/heR95_c0Dkw?feature=shared">Project Demo Video</a>
+      <p class="project__description">
+        <!-- Add your project description here -->
+        <ul>
+          <li>Designed and engineered recreation of infamous Space Invaders video game utilizing microcontrollers programmed
+            in C++ and Assembly.</li>
+          <li>Tested and debugged video game with interactive buttons and multiple responsive sprites.</li> 
+          <li>Implemented main menu with two languages, responsive pause button, and Space Invaders sounds.</li>
+        </ul>
+      </p> 
+    </div>
+
     <!-- Add more project items as needed -->
   </div>
 </section>
