updated hobbies section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -382,7 +382,7 @@ layout: archive
   padding-top: 0;
 }
 
-.about-me, .skills, .resume, .education{
+.about-me, .skills, .resume, .education, .hobbies{
   background: #fff;
   padding: 1.5em;
   border-radius: 10px;
