fixing hobbies title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -352,6 +352,10 @@ layout: archive
   font-family: 'Arial', sans-serif;
 }
 
+.hobbies .section__title {
+  margin-top: 0em;
+}
+
 .biography__title {
   margin-top: 0em;
   font-size: 2em;
