--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -386,7 +386,7 @@ layout: archive
   padding-top: 0;
 }
 
-.about-me, .skills, .resume, .education, .hobbies{
+.about-me, .skills, .resume, .education, .hobbies, .projects{
   background: #fff;
   padding: 1.5em;
   border-radius: 10px;
