--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -231,6 +231,10 @@ layout: archive
   margin-bottom: 0.5em !important;
 }
 
+.projects .section__title {
+  margin-top: 0em;
+}
+
 .education {
   background-color: #f7f7f7;
   padding: 1.5em 0;
