--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -208,7 +208,7 @@ layout: archive
 
 <section class="hobbies">
   <h2 class="section__title">Personal Interests and Hobbies</h2>
-  <div class = "hobbies__description">Aside from engineering, I enjoy playing sports, exploring the outdoors, and traveling during my freetime. I am an avid tennis player, and a huge fan of basketball from being raised as a San Antonio Spurs fan.</div>
+  <div class = "hobbies__description">Aside from engineering, I enjoy playing sports, exploring the outdoors, and traveling during my freetime. I am an avid tennis player, and a huge fan of basketball and the San Antonio Spurs.</div>
   <div class="collage">
     <img src="../assets/images/intramural tennis.jpeg" alt="Hobby Photo 2" class="collage__photo">
     <img src="../assets/images/surfing w dad.jpg" alt="Hobby Photo 4" class="collage__photo">
